# divorce-predictor

./: .dockerignore  .flake8  .gitignore  .gitignore copy  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cml.yaml  cml_on_pr.yaml  train.yaml  train_main.yaml
divorce_predictor/: base.py  train  train.py
divorce_predictor/api/: api.py
divorce_predictor/data/: __init__.py  data_loader.py
divorce_predictor/experiment/: __init__.py  experiment.py
docker/: Dockerfile
dvc_plots/: index.html
ml/api/: sample.json
ml/input/: hyperparameters.json
ml/input/data/: .gitignore
ml/output/: .gitignore  avg_scores.json  confusion.csv  estimator.joblib  scores.json
scripts/: get_data.sh
tests/data/: divorce.csv  test_data_loader.py
