[tool.poetry]
name = "divorce_predictor"
version = "0.1.0"
description = "A machine learning experiment to predict divorces."
authors = ["Ricardo Savii <ricardosavi@g.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.4.3"
scikit-learn = "^1.0.1"
joblib = "^1.1.0"
h5py = "^3.5.0"
dask = {extras = ["dataframe"], version = "^2021.10.0"}
dvc = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
pre-commit = "^2.14.0"
black = {version = "^21.7b0", allow-prereleases = true}
radon = "^5.1.0"
xenon = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "interface: marks test ment to keep interface integrity",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "[version-update] {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"README.md" = [
    "version {version}",
    "img.shields.io/static/v1.svg?label=version&message={version}&color=blue"
]
"automl/VERSION" = [
    "{version}",
]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
                     # the root of the project
)
'''
